--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.tsx",
+    "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,12 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
-    "fastify": "^4.12.0"
+    "dayjs": "^1.11.7",
+    "fastify": "^4.12.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "@prisma/client": "^4.9.0",
     "prisma": "^4.9.0",
+    "prisma-erd-generator": "^1.2.5",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
